add server info page

--- a/OculusDB.csproj
+++ b/OculusDB.csproj
@@ -55,6 +55,9 @@
     <None Update="frontend\style.css">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="frontend\server.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
