start multiple threads for scraping to reduce time by a facetor of about 9

--- a/OculusDB.csproj
+++ b/OculusDB.csproj
@@ -46,6 +46,9 @@
     <None Update="frontend\logo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="frontend\recentactivity.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="frontend\script.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
