--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,7 @@ jobs:
       run: dotnet restore
     - name: List dir
       run: ls
+      working-directory: 'ComputerUtils/ComputerUtils'
     - name: Build
       run: dotnet build --no-restore
     - name: Zip build
