--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,11 +16,11 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: 'ComputerElite/ComputerUtils'
-        path: 'ComputerUtils/ComputerUtils'
+        path: 'ComputerUtils'
     - uses: actions/checkout@v3
       with:
         repository: 'ComputerElite/OculusGraphQLApiLib'
-        path: 'OculusGraphQLApiLib/culusGraphQLApiLib'
+        path: 'OculusGraphQLApiLib'
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
