--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - run: pwd
     - uses: actions/checkout@v3
     - uses: actions/checkout@v3
       with:
