--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,7 +39,12 @@ jobs:
     - name: Zip build
       uses: papeloto/action-zip@v1
       with:
-        files: OculusDB/OculusDB/bin/net6.0
+        files: OculusDB/OculusDB/bin/Debug/net6.0
+        dest: net6.0.zip
+    - name: Zip build
+      uses: papeloto/action-zip@v1
+      with:
+        files: OculusDB/OculusDB/bin/Release/net6.0
         dest: net6.0.zip
     - name: Upload net6.0.zip
       uses: actions/upload-artifact@v3
