add scraping master ui, cl arguments, bugfixes and other improvements

--- a/OculusDB.csproj
+++ b/OculusDB.csproj
@@ -138,6 +138,9 @@
     <None Update="frontend\supportus.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="frontend\scrapingMaster.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
