basically done, we deploying??git add *git add *

--- a/OculusDB.csproj
+++ b/OculusDB.csproj
@@ -141,6 +141,9 @@
     <None Update="frontend\scrapingMaster.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="frontend\setupNode.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
