Add star to save applications

--- a/OculusDB.csproj
+++ b/OculusDB.csproj
@@ -150,6 +150,9 @@
     <None Update="frontend\utils.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="frontend\saved.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
