--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,6 +17,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         path: 'OculusDB'
+        submodules: recursive
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
