--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,8 +16,8 @@ jobs:
     - run: pwd
     - uses: actions/checkout@v3
       with:
-        path: 'OculusDB'
         submodules: recursive
+    - run: tree
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
