--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,25 +25,13 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build
-    - name: Zip build Debug
-      uses: papeloto/action-zip@v1
-      with:
-        files: bin/Debug/net6.0
-        dest: net6.0.zip
-    - name: Upload net6.0.zip
+    - name: Upload Debug net6.0.zip
       uses: actions/upload-artifact@v3
       with:
-        name: net6.0.zip
+        name: net6.0-Debug.zip
         path: bin/Debug/net6.0
-
-        
-    - name: Zip build
-      uses: papeloto/action-zip@v1
-      with:
-        files: bin/Release/net6.0
-        dest: net6.0.zip
-    - name: Upload net6.0.zip
+    - name: Upload Release net6.0.zip
       uses: actions/upload-artifact@v3
       with:
-        name: net6.0.zip
+        name: net6.0-Release.zip
         path: bin/Release/net6.0
