--- a/OculusDB/OculusDB.csproj
+++ b/OculusDB/OculusDB.csproj
@@ -153,6 +153,18 @@
     <None Update="frontend\saved.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="frontend\dist\assets\index-5XTjt8hl.css">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="frontend\.gitignore">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="frontend\dist\assets\index-wYc2ckzf.js">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="frontend\dist\index.html">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
