--- a/OculusDB/frontend/package.json
+++ b/OculusDB/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/node": "^20.10.2",
+    "pnpm": "^8.12.1",
     "solid-js": "^1.8.5"
   },
   "devDependencies": {
