--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 18
-    - uses: pnpm/actions-setup@v2
+    - uses: pnpm/action-setup@v2
       with:
         version: 8
     - name: Build frontend
