--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,7 +3,7 @@ name: .NET
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [ main, OculusDB-current ]
   pull_request:
     branches: [ main ]
 
