--- a/OculusDB/OculusDB.csproj
+++ b/OculusDB/OculusDB.csproj
@@ -153,6 +153,9 @@
     <None Update="frontend\saved.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="frontend\assets\john.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
